Fix overlays being broken without a wrap container

--- a/src/blocks/rowlayout/style.scss
+++ b/src/blocks/rowlayout/style.scss
@@ -118,7 +118,7 @@
 		height: 100%;
 	}
 }
-.kb-row-layout-wrap {
+.wp-block-kadence-rowlayout {
 	.kt-row-layout-overlay {
 		top: 0;
 		left: 0;
